--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
 }
 
 body {
-  background: var(--tg-theme-bg-color);
-  color: var(--tg-theme-text-color);
+  /* background: var(--tg-theme-bg-color);
+  color: var(--tg-theme-text-color); */
+  background: rgb(0, 12, 23);
+  color: rgb(80, 80, 255);
 }
