--- a/src/Components/ProductItem/ProductItem.css
+++ b/src/Components/ProductItem/ProductItem.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     border: 1px solid var(--tg-theme-button-color);
+    border: 1px solid rgb(80, 80, 255);
     padding: 15px;
     width: 170px;
 }
@@ -12,7 +13,6 @@
     background: lightgray;
     height: 100px;
     margin: 0 auto;
-    background: var(--tg-theme-button-color);
 }
 
 .description {
