--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,9 +1,9 @@
 .button {
     padding: 10px 15px;
-    /* background: var(--tg-theme-button-color);
-    color: var(--tg-theme-button-text-color); */
-    background: rgb(80, 80, 255);
-    color: white;
+    background: var(--tg-theme-button-color);
+    color: var(--tg-theme-button-text-color);
+    /* background: rgb(80, 80, 255); */
+    /* color: white; */
     border: none;
     outline: none;
     cursor: pointer;
