--- a/src/Components/ProductItem/ProductItem.css
+++ b/src/Components/ProductItem/ProductItem.css
@@ -35,18 +35,23 @@
 }
 
 .btn-minus {
-    color: rgb(80, 80, 255);
+    /* color: rgb(80, 80, 255); */
     background: none;
-    border: 1px solid rgb(80, 80, 255) 
+    background: var(--tg-theme-button-color);
+    color: var(--tg-theme-button-text-color);
+    border: 1px solid var(--tg-theme-button-color) 
+    /* border: 1px solid rgb(80, 80, 255)  */
 }
 
 .counter {
-    background: rgb(80, 80, 255);
-    color: white;
-    width: 24px; /* Выберите подходящую ширину */
-    height: 24px; /* Выберите подходящую высоту */
+    /* background: rgb(80, 80, 255); */
+    /* color: white; */
+    background: var(--tg-theme-button-color);
+    color: var(--tg-theme-button-text-color);
+    width: 24px;
+    height: 24px;
     padding: 5px;
-    border-radius: 50%; /* Сделать круглым */
+    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
