--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,9 @@
 }
 
 body {
-  background: var(--tg-theme-bg-color);
+  /* background: var(--tg-theme-bg-color); */
   color: var(--tg-theme-text-color);
   /* background: rgb(0, 12, 23);
   color: rgb(80, 80, 255); */
+  background: white
 }
