--- a/src/Components/ProductItem/ProductItem.css
+++ b/src/Components/ProductItem/ProductItem.css
@@ -8,16 +8,20 @@
 
 .img {
     width: 100%;
-    height: 150px;
+    height: 170px;
     margin: 0 auto;
     object-fit: cover;
     background: lightgray;
     border-radius: 10px;
 }
 
+.title {
+    margin: 0 auto;
+}
+
 .description {
     margin: 5px;
-    font-size: 0.8em;
+    font-size: 0.6em;
 }
 
 .price {
@@ -37,7 +41,7 @@
 .btn-minus {
     /* color: rgb(80, 80, 255); */
     background: none;
-    color: var(--tg-theme-button-text-color);
+    color: var(--tg-theme-button-color);
     border: 1px solid var(--tg-theme-button-color) 
     /* border: 1px solid rgb(80, 80, 255)  */
 }
