--- a/src/Components/ProductItem/ProductItem.css
+++ b/src/Components/ProductItem/ProductItem.css
@@ -17,19 +17,19 @@
 
 .title {
     margin: 0 auto;
-    color: var(--tg-theme-button-text-color);
+    color: var(--tg-theme-button-color);
 }
 
 .description {
     margin: 5px;
-    color: var(--tg-theme-button-text-color);
+    color: var(--tg-theme-button-color);
     font-size: 0.6em;
     height: 50px;
 }
 
 .price {
     margin: 5px;
-    color: var(--tg-theme-button-text-color);
+    color: var(--tg-theme-button-color);
 }
 
 .btns-cont {
