--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ body {
   /* background: var(--tg-theme-bg-color); */
   /* background: rgb(0, 12, 23);
   color: rgb(80, 80, 255); */
-  color: var(--tg-theme-text-color);
-  background: white
+  /* color: var(--tg-theme-text-color); */
+  background: white;
+  color: var(--tg-theme-button-color);
 }
