--- a/src/Components/ProductItem/ProductItem.css
+++ b/src/Components/ProductItem/ProductItem.css
@@ -43,11 +43,9 @@
 }
 
 .btn-minus {
-    /* color: rgb(80, 80, 255); */
     background: none;
     color: var(--tg-theme-button-color);
-    border: 1px solid var(--tg-theme-button-color) 
-    /* border: 1px solid rgb(80, 80, 255)  */
+    border: 1px solid var(--tg-theme-button-color) ;
 }
 
 .counter {
@@ -65,4 +63,10 @@
     position: relative;
     top: 3%;
     left: 95%;
+}
+
+.count-empt {
+    width: 24px;
+    height: 24px;
+    padding: 5px;
 }
